# Quiz

./: .env.example  .gitignore  .gitlab-ci.yml  .gitlab-deploy.yml  README.md
backend/: Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/config/: Dockerfile  __init__.py
backend/scripts/: format.sh
backend/src/: run.py
backend/src/app/: __init__.py
backend/src/app/application/: __init__.py
backend/src/app/application/commands/: __init__.py  fetch_api_data.py
backend/src/app/application/common/: __init__.py
backend/src/app/application/queries/: __init__.py  get_api_data.py
backend/src/app/domain/: __init__.py
backend/src/app/domain/entities/: __init__.py  api_data.py  base.py
backend/src/app/domain/services/: __init__.py
backend/src/app/domain/value_objects/: __init__.py  base.py
backend/src/app/infrastructure/: __init__.py
backend/src/app/infrastructure/adapters/: __init__.py  public_api_client.py
backend/src/app/infrastructure/auth/: __init__.py
backend/src/app/infrastructure/persistence/: __init__.py  database.py
backend/src/app/presentation/: __init__.py
backend/src/app/presentation/http/: __init__.py
backend/src/app/setup/: __init__.py  app_factory.py
backend/src/app/setup/config/: __init__.py  settings.py
backend/tests/: __init__.py  conftest.py  test_application_commands.py  test_application_queries.py  test_config_settings.py  test_domain_entities.py  test_infrastructure_adapters.py  test_infrastructure_repositories.py  test_presentation_controllers.py  test_presentation_schemas.py
(+53 files in other folders)
